@@ -1,5 +1,11 @@
 2009-01-15  Sam Weinig  <sam@webkit.org>
 
+        Fix Qt build.
+
+        * runtime/Collector.cpp:
+
+2009-01-15  Sam Weinig  <sam@webkit.org>
+
         Reviewed by Gavin Barraclough.
 
         Fix crash seen running fast/canvas.
